RESOLVED FIXED255606
[GStreamer][WebRTC] Ignore DataChannel SDP media when firing incoming track events
https://bugs.webkit.org/show_bug.cgi?id=255606
Summary [GStreamer][WebRTC] Ignore DataChannel SDP media when firing incoming track e...
Philippe Normand
Reported 2023-04-18 09:47:21 PDT
ssia
Attachments
Philippe Normand
Comment 1 2023-04-18 09:49:56 PDT
EWS
Comment 2 2023-04-19 02:06:09 PDT
Committed 263125@main (ac6236a6c23a): <https://commits.webkit.org/263125@main> Reviewed commits have been landed. Closing PR #12865 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-19 02:07:19 PDT
Note You need to log in before you can comment on or make changes to this bug.