[GStreamer][WebRTC] Ignore DataChannel SDP media when firing incoming track events https://bugs.webkit.org/show_bug.cgi?id=255606

Reviewed by Xabier Rodriguez-Calvar.

The DataChannel payloads are managed internally in webrtcbin, there's no exposed source/sink pads
for this, so this kind of media should not be accounted for when deciding to fire incoming track
events.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::addRemoteStream):

Canonical link: https://commits.webkit.org/263125@main